--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+a {
+    cursor: pointer;
+    color:steelblue;
+    &:hover {
+        opacity: .6;
+    }
+}
+
+.search-container {
+    position: absolute; 
+    z-index: 100;
+    top: 110px;
+    left: 30px;
+}
+
+.title {
+    position: absolute;
+    top:80px;
+    left:30px;
+}
+
+.app-title{
+    font-size: 1.5em;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 6px;
+    color:slategrey;
+}
